# BanHammer

./: .env  .gitignore  Cargo.toml  Justfile  README.md  TODO.md  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
config/: moderation.toml
src/: main.rs
src/core/: config.rs  logger.rs  mod.rs  state.rs  version.rust
src/i18n/: en.rs  es.rs  lang.rs  manager.rs  messages.rs  mod.rs  pt.rs
src/moderation/: csam.rs  engine.rs  gambling.rs  links.rs  mod.rs  pornography.rs  regex.rs  rules.rs  spam.rs  strikes.rs  violation.rs
src/storage/: memory.rs  mod.rs  sqlite.rs
src/telegram/: admin.rs  commands.rs  dispatcher.rs  events.rs  handlers.rs  mod.rs
src/telegram/commands/: blockdomain.rs  help.rs  language.rs  mod.rs  reload.rs  stats.rs  status.rs  unban.rs
src/telegram/enforcement/: mod.rs  punishment.rs  trust.rs  violation.rs
src/telegram/handlers/: command_handler.rs  message_handler.rs  mod.rs
src/telegram/utils/: markdown.rs
toolchain/: rust-toolchain.toml
